# wavexis-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
docs/: architecture.md  configuration.md  docker.md  http-transport.md  index.md  quickstart.md  rate-limiting.md  resources-prompts.md
docs/examples/: multi-action.md  scrape.md  screenshot.md  testing.md
docs/tools/: a11y.md  core.md  data.md  devtools.md  emulation.md  experimental.md  interactions.md  network.md  storage.md  testing.md  video.md  vision.md  workflows.md
src/wavexis_mcp/: __init__.py  caps.py  rate_limiter.py  resources.py  server.py  session.py  streaming.py
tests/: __init__.py  conftest.py
tests/integration/: test_a11y_interactions_devtools.py  test_act_workflow.py  test_all_tiers.py  test_caps_filtering.py  test_core_workflow.py  test_http_transport.py  test_network_storage_emulation.py  test_session_lifecycle.py  test_stateless_mode.py  test_vision_video_testing.py  test_workflows_data_experimental.py
tests/unit/: test_a11y.py  test_act.py  test_all_tools_smoke.py  test_caps.py  test_capture.py  test_cookies.py  test_coverage_gaps.py  test_coverage_remaining.py  test_data.py  test_devtools.py  test_dom.py  test_emulation.py  test_experimental.py  test_formatter.py  test_input.py  test_interactions.py  test_javascript.py  test_models.py  test_navigation.py  test_network.py  test_network_extended.py  test_parity.py  test_prompts.py  test_rate_limiter.py  test_resources.py  test_server_cli.py  test_session.py  test_storage.py  test_streaming.py  test_tabs.py  test_testing.py  test_utility.py  test_video.py  test_vision.py  test_workflows.py
wavexis_mcp/: __init__.py  act.py  caps.py  convenience.py  errors.py  formatter.py  models.py  prompts.py  server.py  session.py
wavexis_mcp/tools/: __init__.py  a11y.py  capture.py  cookies.py  data.py  devtools.py  dom.py  emulation.py  experimental.py  input.py  interactions.py  javascript.py  navigation.py  network.py  playwright_parity.py  session.py  storage.py  tabs.py  testing.py  utility.py  video.py  vision.py  workflows.py
(+12 files in other folders)
