[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavexis-mcp"
version = "1.6.2"
description = "MCP server exposing the wavexis browser automation library to LLMs — 175 tools, 13 capability tiers, zero Node.js"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
keywords = ["mcp", "browser", "automation", "cdp", "bidi", "screenshot", "scraping", "chromium", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0",
    "wavexis>=2.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cdp = ["wavexis[cdp]"]
bidi = ["wavexis[bidi]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "wavexis[cdp]",
]

[project.scripts]
wavexis-mcp = "wavexis_mcp.server:main"

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/wavexis-mcp"
Repository = "https://github.com/MathiasPaulenko/wavexis-mcp"
Issues = "https://github.com/MathiasPaulenko/wavexis-mcp/issues"
Documentation = "https://mathiaspaulenko.github.io/wavexis-mcp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["ASYNC109"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["wavexis.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests with mocks",
    "integration: tests against a real Chrome browser",
    "slow: tests that take more than 5 seconds",
    "chrome: tests that require Chrome specifically",
]

[tool.hatch.build.targets.wheel]
packages = ["wavexis_mcp"]
